--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h3 class="visible-xs">{{currentImage.title}}</h3>
                             </div>
                             <div class="modal-body">
                                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
