--- a/www/index.html
+++ b/www/index.html
@@ -10,16 +10,37 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" media="screen">
     <link rel="stylesheet" href="css/isotope.css">
+    <script type="text/javascript" charset="utf-8">
+
+        // Wait for device API libraries to load
+        //
+        function onLoad() {
+            document.addEventListener("deviceready", onDeviceReady, false);
+        }
+
+        // device APIs are available
+        //
+        function onDeviceReady() {
+            // Register the event listener
+            document.addEventListener("backbutton", onBackKeyDown, false);
+        }
+
+        // Handle the back button
+        //
+        function onBackKeyDown() {
+           navigator.app.exitApp();
+      }
+
+      </script>
 
 
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+      <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="js/html5shiv.js"></script>
           <script src="js/respond.min.js"></script>
           <![endif]-->
       </head>
-      <body>
+      <body onload="onLoad()">
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
                 <a class="navbar-brand">MUVAM</a>
@@ -94,7 +115,7 @@
         <script src="http://jrsaucedo.com/clientes/muvam/js/galeria-app-mobile.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript">
-            app.initialize();
+        app.initialize();
         </script>
 
         <!-- Isotope -->
